# open-sour-dough

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: dockerize.yaml
open_sourdough_cam/: main.py  settings.py
