[project]
name = "open-sourdough-cam"
version = "0.1.0"
description = ""
authors = [{ name = "Andreas Borgstad", email = "aborgstad@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=23.1.0,<24",
    "isort>=5.12.0,<6",
]
